General code review from testings
