# src/api/userHandlers/deleteUser.ts
@@ -12,36 +12,42 @@ import { CrmUser } from "../../classes/CrmUser";
  * @param event
  */
 
-export const setUserRole: APIGatewayProxyHandler = async function (
+export const deleteUser: APIGatewayProxyHandler = async function (
   event: APIGatewayProxyEvent
 ): Promise<APIGatewayProxyResult> {
   const result: APIGatewayProxyResult = {
-    body: "Missing params email and/or role. role must be either 'admin' or 'user'",
+    body: "Body must be empty",
     statusCode: 400,
   };
   const { body: eventBody } = event;
   // validate params
-  if (!eventBody) {
+  if (eventBody) {
     return result;
   }
-  const { email, role } = JSON.parse(eventBody);
-  if (!email || !role || (role !== "admin" && role !== "user")) {
+  let userId: string = "";
+  if (
+    !event.pathParameters ||
+    event.queryStringParameters ||
+    !event.pathParameters.id
+  ) {
     return result;
+  } else {
+    userId = `${event.pathParameters.id}`;
   }
   try {
-    const voidResult: any = await CrmUser.setUserRoleByEmail(email,role);
+    const voidResult: any = await CrmUser.delete(userId);
     if (!voidResult) {
       result.statusCode = 200;
-      result.body = JSON.stringify("Role update done.");
+      result.body = JSON.stringify("User deleted.");
     } else {
-      throw new Error("Unknown internal error trying to set role.");
+      throw new Error("Unknown internal error trying to delete user.");
     }
   } catch (err) {
     if (`${err}`.indexOf("Password") < 0) {
       result.statusCode = 500;
     }
     result.body = `${err}`;
-    console.log("Create user error:", {
+    console.log("Delete user error:", {
       err,
       event,
     });
