# src/api/userHandlers/deleteUserByEmail.ts
@@ -12,11 +12,11 @@ import { CrmUser } from "../../classes/CrmUser";
  * @param event
  */
 
-export const setUserRole: APIGatewayProxyHandler = async function (
+export const deleteUserByEmail: APIGatewayProxyHandler = async function (
   event: APIGatewayProxyEvent
 ): Promise<APIGatewayProxyResult> {
   const result: APIGatewayProxyResult = {
-    body: "Missing params email and/or role. role must be either 'admin' or 'user'",
+    body: "Missing param email",
     statusCode: 400,
   };
   const { body: eventBody } = event;
@@ -24,24 +24,24 @@ export const setUserRole: APIGatewayProxyHandler = async function (
   if (!eventBody) {
     return result;
   }
-  const { email, role } = JSON.parse(eventBody);
-  if (!email || !role || (role !== "admin" && role !== "user")) {
-    return result;
-  }
   try {
-    const voidResult: any = await CrmUser.setUserRoleByEmail(email,role);
+    const { email } = JSON.parse(eventBody);
+    if (!email) {
+      return result;
+    }
+      const voidResult: any = await CrmUser.deleteByEmail(email);
     if (!voidResult) {
       result.statusCode = 200;
-      result.body = JSON.stringify("Role update done.");
+      result.body = JSON.stringify("User deleted.");
     } else {
-      throw new Error("Unknown internal error trying to set role.");
+      throw new Error("Unknown internal error trying to delete user.");
     }
   } catch (err) {
     if (`${err}`.indexOf("Password") < 0) {
       result.statusCode = 500;
     }
     result.body = `${err}`;
-    console.log("Create user error:", {
+    console.log("Delete user by email error:", {
       err,
       event,
     });
